Replace data.json with actual English text from 1984; fix script loading by using IIFE format instead of ESM

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <div id="word-display"></div>
-    <script type="module" src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
