--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
 
 </head>
 <body>
+    <div id="controls">
+        <label for="speed-slider">Speed:</label>
+        <input type="range" id="speed-slider" min="100" max="1000" value="500" step="50">
+        <label for="size-slider">Font Size:</label>
+        <input type="range" id="size-slider" min="1" max="5" value="3" step="0.1">
+        <button id="start-pause-btn">Start</button>
+    </div>
     <div id="word-display"></div>
     <script src="script.js"></script>
 </body>
