--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div id="controls">
-        <label for="speed-slider">Speed:</label>
-        <input type="range" id="speed-slider" min="100" max="1000" value="500" step="50">
-        <label for="size-slider">Font Size:</label>
+        <label for="speed-slider">Speed: <span id="speed-value">500</span>ms</label>
+        <input type="range" id="speed-slider" min="50" max="2000" value="1025" step="25">
+        <label for="size-slider">Font Size: <span id="size-value">3.0</span>x</label>
         <input type="range" id="size-slider" min="1" max="5" value="3" step="0.1">
         <button id="start-pause-btn">Start</button>
     </div>
