--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div id="controls">
-        <label for="speed-slider">Speed: <span id="speed-value">500</span>ms</label>
+        <label for="speed-slider">Speed: <span id="speed-value">59</span> WPM</label>
         <input type="range" id="speed-slider" min="50" max="2000" value="1025" step="25">
         <label for="size-slider">Font Size: <span id="size-value">3.0</span>x</label>
-        <input type="range" id="size-slider" min="1" max="5" value="3" step="0.1">
+        <input type="range" id="size-slider" min="1" max="10" value="3" step="0.1">
         <button id="start-pause-btn">Start</button>
     </div>
     <div id="word-display"></div>
