--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,15 @@
         <input type="range" id="speed-slider" min="50" max="2000" value="1025" step="25">
         <label for="size-slider">Font Size: <span id="size-value">3.0</span>x</label>
         <input type="range" id="size-slider" min="1" max="10" value="3" step="0.1">
+        <label for="font-select">Font:</label>
+        <select id="font-select">
+            <option value="Arial">Arial</option>
+            <option value="Georgia">Georgia</option>
+            <option value="Times New Roman">Times New Roman</option>
+            <option value="Helvetica">Helvetica</option>
+            <option value="Verdana">Verdana</option>
+            <option value="Trebuchet MS">Trebuchet MS</option>
+        </select>
         <button id="start-pause-btn">Start</button>
     </div>
     <div id="word-display"></div>
