Add glassmorphism styling to controls with title; style inputs; add credits section with icons and links

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="controls">
+        <h2>Controls</h2>
         <label for="speed-slider">Speed: <span id="speed-value">59</span> WPM</label>
         <input type="range" id="speed-slider" min="50" max="2000" value="1025" step="25">
         <label for="size-slider">Font Size: <span id="size-value">3.0</span>x</label>
@@ -24,6 +25,11 @@
             <option value="Trebuchet MS">Trebuchet MS</option>
         </select>
         <button id="start-pause-btn">Start</button>
+    </div>
+    <div id="credits">
+        <a href="https://github.com/jine" target="_blank" title="GitHub">🐙 GitHub</a>
+        <a href="https://github.com/jine/read-fast" target="_blank" title="Repository">📁 Repo</a>
+        <a href="https://JimNelin.com" target="_blank" title="Website">🌐 Website</a>
     </div>
     <div id="word-display"></div>
     <script src="script.js"></script>
