--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Read Fast</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="stylesheet.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Lato&family=Roboto&family=Montserrat&family=Raleway&family=Atkinson+Hyperlegible&family=Lexend&family=Inter&family=Nunito&family=Poppins&family=Source+Sans+Pro&family=Ubuntu&family=Work+Sans&family=Crimson+Text&family=Lora&family=Merriweather&family=Playfair+Display&family=Source+Serif+Pro&family=Noto+Sans&family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -17,12 +18,26 @@
         <input type="range" id="size-slider" min="1" max="10" value="3" step="0.1">
         <label for="font-select">Font:</label>
         <select id="font-select">
-            <option value="Arial">Arial</option>
-            <option value="Georgia">Georgia</option>
-            <option value="Times New Roman">Times New Roman</option>
-            <option value="Helvetica">Helvetica</option>
-            <option value="Verdana">Verdana</option>
-            <option value="Trebuchet MS">Trebuchet MS</option>
+            <option value="Open Sans">Open Sans</option>
+            <option value="Lato">Lato</option>
+            <option value="Roboto">Roboto</option>
+            <option value="Montserrat">Montserrat</option>
+            <option value="Raleway">Raleway</option>
+            <option value="Atkinson Hyperlegible">Atkinson Hyperlegible</option>
+            <option value="Lexend">Lexend</option>
+            <option value="Inter">Inter</option>
+            <option value="Nunito">Nunito</option>
+            <option value="Poppins">Poppins</option>
+            <option value="Source Sans Pro">Source Sans Pro</option>
+            <option value="Ubuntu">Ubuntu</option>
+            <option value="Work Sans">Work Sans</option>
+            <option value="Crimson Text">Crimson Text</option>
+            <option value="Lora">Lora</option>
+            <option value="Merriweather">Merriweather</option>
+            <option value="Playfair Display">Playfair Display</option>
+            <option value="Source Serif Pro">Source Serif Pro</option>
+            <option value="Noto Sans">Noto Sans</option>
+            <option value="IBM Plex Sans">IBM Plex Sans</option>
         </select>
         <button id="start-pause-btn">Start</button>
     </div>
