--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
         <input type="range" id="speed-slider" min="50" max="2000" value="1025" step="25">
         <label for="size-slider">Font Size: <span id="size-value">3.0</span>x</label>
         <input type="range" id="size-slider" min="1" max="10" value="3" step="0.1">
+        <label for="spacing-slider">Letter Spacing: <span id="spacing-value">0.6</span>em</label>
+        <input type="range" id="spacing-slider" min="0.1" max="1.0" value="0.6" step="0.1">
         <label for="font-select">Font:</label>
         <select id="font-select">
             <option value="Open Sans">Open Sans</option>
