Add language dropdown with English, Finnish, Swedish; translate texts accordingly

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,12 @@
         <input type="range" id="size-slider" min="1" max="10" value="3" step="0.1">
         <label for="spacing-slider">Letter Spacing: <span id="spacing-value">0.6</span>em</label>
         <input type="range" id="spacing-slider" min="0.1" max="1.0" value="0.6" step="0.1">
+        <label for="lang-select">Language:</label>
+        <select id="lang-select">
+            <option value="en">English</option>
+            <option value="fi">Finnish</option>
+            <option value="sv">Swedish</option>
+        </select>
         <label for="font-select">Font:</label>
         <select id="font-select">
             <option value="Open Sans">Open Sans</option>
